--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,21 +42,21 @@ function(get_all_options output_var)
 endfunction()
 
 # Create empty file if GGML_CUDA, GGML_METAL or GGML_SYCL is ON
-# if (GGML_CUDA OR GGML_METAL OR GGML_HIPBLAS OR GGML_VULKAN OR GGML_SYCL)
-#     set(SOURCE_EMPTY_FILE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/nexa/gguf/lib/empty_file.txt")
-#     add_custom_command(
-#         OUTPUT ${SOURCE_EMPTY_FILE_PATH}
-#         COMMAND ${CMAKE_COMMAND} -E touch ${SOURCE_EMPTY_FILE_PATH}
-#         COMMENT "Creating an empty file to source folder because gpu option is ON"
-#     )
-#     set(WHEEL_EMPTY_FILE_PATH "${SKBUILD_PLATLIB_DIR}/nexa/gguf/lib/empty_file.txt")
-#     add_custom_command(
-#         OUTPUT ${WHEEL_EMPTY_FILE_PATH}
-#         COMMAND ${CMAKE_COMMAND} -E touch ${WHEEL_EMPTY_FILE_PATH}
-#         COMMENT "Creating an empty file to lib folder because gpu option is ON"
-#     )    
-#     add_custom_target(create_empty_file ALL DEPENDS ${SOURCE_EMPTY_FILE_PATH} ${WHEEL_EMPTY_FILE_PATH})
-# endif()
+if (GGML_CUDA OR GGML_METAL OR GGML_HIPBLAS OR GGML_VULKAN OR GGML_SYCL)
+    set(SOURCE_EMPTY_FILE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/nexa/gguf/lib/empty_file.txt")
+    add_custom_command(
+        OUTPUT ${SOURCE_EMPTY_FILE_PATH}
+        COMMAND ${CMAKE_COMMAND} -E touch ${SOURCE_EMPTY_FILE_PATH}
+        COMMENT "Creating an empty file to source folder because gpu option is ON"
+    )
+    set(WHEEL_EMPTY_FILE_PATH "${SKBUILD_PLATLIB_DIR}/nexa/gguf/lib/empty_file.txt")
+    add_custom_command(
+        OUTPUT ${WHEEL_EMPTY_FILE_PATH}
+        COMMAND ${CMAKE_COMMAND} -E touch ${WHEEL_EMPTY_FILE_PATH}
+        COMMENT "Creating an empty file to lib folder because gpu option is ON"
+    )    
+    add_custom_target(create_empty_file ALL DEPENDS ${SOURCE_EMPTY_FILE_PATH} ${WHEEL_EMPTY_FILE_PATH})
+endif()
 
 # Collect all user-defined options
 get_all_options(USER_DEFINED_OPTIONS)
@@ -91,7 +91,7 @@ if(WIN32)
 endif()
 
 # stable_diffusion_cpp project
-option(STABLE_DIFFUSION_BUILD "Build stable-diffusion.cpp" OFF)
+option(STABLE_DIFFUSION_BUILD "Build stable-diffusion.cpp" ON)
 if(STABLE_DIFFUSION_BUILD)
 
     set(SD_CMAKE_ARGS
