--- a/.github/workflows/build-aar.yml
+++ b/.github/workflows/build-aar.yml
@@ -1,11 +1,12 @@
 name: Build Android AAR
 
 on:
-  push:
-    branches:
-      - main
-      - android-sdk
-  pull_request:
+  workflow_dispatch:
+  # push:
+  #   branches:
+  #     - main
+  #     - android-sdk
+  # pull_request:
 
 jobs:
   build:
