--- a/.github/workflows/build-wheels-cuda-win.yaml
+++ b/.github/workflows/build-wheels-cuda-win.yaml
@@ -115,7 +115,7 @@ jobs:
           }
           $env:VERBOSE = '1'
 
-          $env:CMAKE_ARGS = '-DSD_CUBLAS=ON -DGGML_CUDA=ON -DGGML_CUBLAS=ON -DCMAKE_CUDA_ARCHITECTURES=all'
+          $env:CMAKE_ARGS = '-DSD_CUDA=ON -DGGML_CUDA=ON -DCMAKE_CUDA_ARCHITECTURES=all'
           $env:CMAKE_ARGS = $env:CMAKE_ARGS + ' -DGGML_CUDA_FORCE_MMQ=ON -DGGML_AVX2=OFF -DGGML_FMA=OFF -DGGML_F16C=OFF'
           $env:CMAKE_ARGS = $env:CMAKE_ARGS + ' -DCMAKE_SYSTEM_VERSION=10.0.18362.0 -DCMAKE_VS_WINDOWS_TARGET_PLATFORM_VERSION=10.0.18362.0'
           $env:CMAKE_BUILD_PARALLEL_LEVEL = $(nproc)
