--- a/.github/workflows/generate-index-from-release.yaml
+++ b/.github/workflows/generate-index-from-release.yaml
@@ -3,7 +3,7 @@ name: Wheels Index
 on:
   # Trigger on new release
   workflow_run:
-    workflows: ["Build Wheels (CPU)", "Build Wheels (CUDA)", "Build Wheels (Metal)", "Build Wheels (ROCm)", "Build Wheels (Vulkan)"]
+    workflows: ["Build Wheels (CPU)", "Build Wheels (CUDA)", "Build Wheels (Metal)", "Build Wheels (ROCm)", "Build Wheels (Vulkan)", "Build Wheels (SYCL)"]
     types:
       - completed
 
@@ -49,6 +49,7 @@ jobs:
           ./scripts/releases-to-pep-503.sh index/whl/metal '^[v]?[0-9]+\.[0-9]+\.[0-9]+(\.[0-9]+)?-metal$'
           ./scripts/releases-to-pep-503.sh index/whl/rocm621 '^[v]?[0-9]+\.[0-9]+\.[0-9]+(\.[0-9]+)?-rocm621$'
           ./scripts/releases-to-pep-503.sh index/whl/vulkan '^[v]?[0-9]+\.[0-9]+\.[0-9]+(\.[0-9]+)?-vulkan'
+          ./scripts/releases-to-pep-503.sh index/whl/sycl '^[v]?[0-9]+\.[0-9]+\.[0-9]+(\.[0-9]+)?-sycl'
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
